--- a/styles.css
+++ b/styles.css
@@ -2,22 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@800&display=swap');
 
 * {
-    margin: 1;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 body {
     background-color: whitesmoke;
-}
-
-.contenedor {
-    margin: 0 auto;
-    width: 100%;
-    max-width: 1000px;
-    margin-bottom: auto;
-    z-index: 3;
-    padding-top: 120px;
 }
 
 #carouselExampleCaptions {
@@ -30,13 +21,15 @@ body {
 }
 
 header {
-    background-image: url(https://64.media.tumblr.com/c8c3e4629ccf656cfe7245790e5227c2/268146304df94902-fa/s2048x3072/184794c58457a6a948034b6d63ebe4a588c51587.png);
+    background-image: url(img/fondo.jpg);
     background-size: cover;
     width: 100%;
     position: fixed;
     padding: 10px;
     z-index: 5;
 }
+
+
 
 
 nav {
@@ -61,21 +54,15 @@ nav ul li a {
     font-weight: bold;
 }
 
-aside{
-    padding-top: 100px;
-}
 
 main {
     padding-top: 100px;
-    margin-left: 20px;
 }
 
-#carrito {
-    text-align: right;
-}
+
 
 footer {
-    margin-top: 300px;
+    margin-top: 200px;
 }
 
 
@@ -96,5 +83,6 @@ h3 {
     font-size: 20px;
     font-family: 'Noto Serif', serif;
 }
+
 
 
